FIx page alignments

--- a/SalaryManagementMVC/SalaryManagementMVC/Content/css/user.css
+++ b/SalaryManagementMVC/SalaryManagementMVC/Content/css/user.css
@@ -8,14 +8,13 @@
 .form-control, .form-floating label {
     margin-bottom: 10px;
 }
-/* Wrapper for the entire page, using flexbox for layout */
+
 #wrapper {
     display: flex;
     flex-direction: column;
     height: 100vh;
 }
 
-/* Header styling */
 #header {
     background-color: #34495e;
     color: white;
@@ -29,15 +28,14 @@
     flex: 1;
 }
 
-/* Fixed-size sidebar */
 #sidebar {
-    width: 250px; /* Fixed width */
+    width: 180px;
     background-color: #2c3e50;
     padding: 15px;
     color: white;
     flex-shrink: 0; /* Prevents the sidebar from shrinking */
-    flex-grow: 0; /* Prevents the sidebar from growing */
-    box-sizing: border-box; /* Includes padding and border in the width */
+    flex-grow: 0;
+    box-sizing: border-box;
 }
 
     #sidebar ul {
@@ -61,7 +59,6 @@
                     background-color: #34495e;
                 }
 
-/* Main content area takes the remaining space */
 #content {
     flex-grow: 1;
     padding: 15px;
@@ -69,7 +66,6 @@
     overflow-y: auto;
 }
 
-/* Footer styling */
 #footer {
     background-color: #34495e;
     color: white;
